# simple_image_board

./: .gitignore  anot.txt  compose.yml
api/: Cargo.toml
api/src/: errors.rs  logger.rs  main.rs
api/src/model/: entities.rs  file_schema.rs  mod.rs
api/src/routes/: endpoints.rs  file_route.rs  graphql.rs  mod.rs  new_tag.rs  upload.rs
api/src/services/: mod.rs  sql_service.rs
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css  schemas.ts
app/src/components/: PostsPages.tsx  TagsTab.tsx  UploadModal.tsx  footer.tsx  header.tsx  newTagModal.tsx
db/scripts/: nrml.sql
file_server/: Cargo.toml
file_server/src/: file_register.rs  file_router.rs  main.rs
